editing the default template

--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,3 @@
-# Hi, I'm LekoArts
+# Hi, I'm Peter Chiu
 
-I'm a designer durned software engineer and write about JS & React at [lekoarts.de](https://www.lekoarts.de?utm_source=cara&utm_medium=Starter)
+I'm a PM at [Google](https://www.google.com) and I'm using this website to better understand current decentralized [web3 technologies](https://en.wikipedia.org/wiki/Web3)
