--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -1,32 +1,30 @@
 ## Projects
 
 <ProjectCard
-  title="Tips & Tricks for Gatsby"
-  link="https://www.lekoarts.de/gatsby/tips-and-tricks-for-gatsby?utm_source=cara&utm_medium=Theme"
+  title="Current Product"
+  link="https://tv.youtube.com"
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
-  A collection of short, but useful quick tips shared by me and the community
-  about Gatsby. From GraphQL over local development to deployment.
+  The current product I work on. It's about TV and is awesome.
 </ProjectCard>
 <ProjectCard
-  title="Setting  up a yarn Workspace"
-  link="https://www.lekoarts.de/javascript/setting-up-a-yarn-workspace-with-typescript-eslint-and-cypress?utm_source=cara&utm_medium=Theme"
+  title="Gatsby for static web pages"
+  link="https://gatsbyjs.com"
   bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
 >
-  A robust solution for multi-package repositories.
+  I used Gatsby to build a static website
 </ProjectCard>
 <ProjectCard
-  title="Adding a Draft Feature to Gatsby"
-  link="https://www.lekoarts.de/garden/adding-a-draft-feature-to-gatsby?utm_source=cara&utm_medium=Theme"
-  bg="linear-gradient(to right, #009245 0%, #FCEE21 100%)"
+  title="Ethereum Name Service"
+  link="https://ens.domains/"
+  bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
 >
-  A solution with the createSchemaCustomization API.
+  I used Ethereum name service to create a canonical humanr readable web2 style URL
 </ProjectCard>
 <ProjectCard
-  title="Theme UI Plugin for Figma"
-  link="https://www.lekoarts.de/design/introducing-the-theme-ui-plugin-for-figma?utm_source=cara&utm_medium=Theme"
-  bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
+  title="Fleek for IPNS/IPFS"
+  link="https://fleek.co/"
+  bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
 >
-  The Theme UI plugin for Figma allows for a workflow where Theme UI is the
-  starting point both for design & development.
+  I used Fleek to deploy this site to IPNS for the decentralized anti censorship web
 </ProjectCard>
