edit to the site name and other metadata components

--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,3 +1,3 @@
-## About
+## LinkedIn WhoAmI
 
 > Strategic product manager, engineer, and team leader with proven track record of building outstanding services from the ground up. Skilled at communicating and achieving results across a variety of disciplines. Passionate about developing teams and mentoring staff.
