fixed spelling on project page and added an email address to proton mail

--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -19,7 +19,7 @@
   link="https://ens.domains/"
   bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
 >
-  I used Ethereum name service to create a canonical humanr readable web2 style URL
+  I used Ethereum name service to create a canonical human readable web2 style URL
 </ProjectCard>
 <ProjectCard
   title="Fleek for IPNS/IPFS"
