--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -1,3 +1,3 @@
 ## Get in touch
 
-Find me on [LinkedIn](https://www.linkedin.com/in/pmchiu/) or email me at peter <you know the sign that goes here> chiubacca <you guess the punctuation> com
+Find me on [LinkedIn](https://www.linkedin.com/in/pmchiu/) or email me at peter \<you know the sign that goes here\> chiubacca \<you guess the punctuation\> com
